Rework how system properties are passed into an mda invocation.
This allows new properties to be injected more easily, and allows Ant's property
hierarchy (including external property files) to be used to create new ones or
override old ones.